# Student_detector

./: README.md
face_recognition_app/: README.md  pyproject.toml  requirements.txt
face_recognition_app/app/: __init__.py  main.py
face_recognition_app/app/controllers/: __init__.py  camera_controller.py  face_controller.py
face_recognition_app/app/models/: __init__.py  camera_model.py  face_detector.py  face_recognizer.py  insightface_service.py
face_recognition_app/app/utils/: __init__.py  config.py  helpers.py
face_recognition_app/app/views/: __init__.py  main_view.py  video_view.py
face_recognition_app/data/: README.md
face_recognition_app/scripts/: install_dependencies.ps1  install_dependencies.sh  run_app.ps1  run_app.sh
face_recognition_app/tests/: __init__.py  test_config.py
