[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "face_recognition_app"
version = "0.1.0"
description = "MVC Face Recognition App using OpenCV and SOLID principles"
requires-python = ">=3.9"
dependencies = [
    "opencv-python>=4.9.0",
    "numpy>=1.24.0",
    "loguru>=0.7.0",
    "insightface>=0.7.3",
    "onnxruntime>=1.15.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "mypy>=1.8.0",
]


